--- a/app.json
+++ b/app.json
@@ -24,21 +24,7 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.jc-solutions.educationalgames",
-      "publishBundlePath": "ios/letters/Supporting/shell-app.bundle",
-      "publishManifestPath": "ios/letters/Supporting/shell-app-manifest.json"
-    },
-    "isDetached": true,
-    "detach": {
-      "iosExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/ios-v2.14.2-sdk36.0.0-e055f8a6-47bf-455c-9f14-d5a631ea2dd3.tar.gz",
-      "androidExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/android-v2.14.0-sdk36.0.0-fb8689e6-fd42-4b18-b01f-ac2ef3bc8681.tar.gz"
-    },
-    "scheme": "exp16cd756cf7b441e88337348c81119779",
-    "android": {
-      "package": "com.jcsolutions.educationalgames",
-      "publishBundlePath": "android/app/src/main/assets/shell-app.bundle",
-      "publishManifestPath": "android/app/src/main/assets/shell-app-manifest.json"
+      "supportsTablet": true
     }
   }
 }
