--- a/package.json
+++ b/package.json
@@ -5,38 +5,28 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/samples": "~36.0.0",
-    "@expo/vector-icons": "~10.0.0",
-    "@react-native-community/cameraroll": "^1.3.0",
-    "@react-navigation/web": "~1.0.0-alpha.9",
     "expo": "~36.0.0",
-    "expo-asset": "~8.0.0",
-    "expo-constants": "~8.0.0",
-    "expo-font": "~8.0.0",
-    "expo-web-browser": "~8.0.0",
+    "expo-image-picker": "~8.0.1",
     "md5": "^2.2.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-image": "^2.2.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-paper": "^3.4.0",
     "react-native-reanimated": "~1.4.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-web": "~0.11.7",
-    "react-navigation": "~4.0.10",
-    "react-navigation-stack": "~1.10.3",
-    "react-navigation-tabs": "~2.6.2"
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0",
-    "jest-expo": "~36.0.1"
+    "@babel/core": "^7.0.0"
   },
   "private": true
 }
