--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
-    "expo-font": "~8.0.0"
+    "expo-font": "~8.0.0",
+    "expo-speech": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
